Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10183

Hit promise DCHECK while looping result spooling tests

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.0.0
    • Backend
    • None

    Description

      while impala-py.test tests/query_test/test_result_spooling.py -n4 ; do date; done
      
      F0921 10:14:35.355281  5842 promise.h:61] Check failed: mode == PromiseMode::MULTIPLE_PRODUCER [ mode = 0 , PromiseM
      ode::MULTIPLE_PRODUCER = 1 ]Called Set(..) twice on the same Promise in SINGLE_PRODUCER mode
      *** Check failure stack trace: ***
          @          0x52087fc  google::LogMessage::Fail()
          @          0x520a0ec  google::LogMessage::SendToLog()
          @          0x520815a  google::LogMessage::Flush()
          @          0x520bd58  google::LogMessageFatal::~LogMessageFatal()
          @          0x223cc50  impala::Promise<>::Set()
          @          0x293f21d  impala::BufferedPlanRootSink::Cancel()
          @          0x2317856  impala::FragmentInstanceState::Cancel()
          @          0x2284c62  impala::QueryState::Cancel()
          @          0x2464728  impala::ControlService::CancelQueryFInstances()
          @          0x253df37  _ZZN6impala16ControlServiceIfC4ERK13scoped_refptrIN4kudu12MetricEntityEERKS1_INS2_3rpc13Re
      sultTrackerEEENKUlPKN6google8protobuf7MessageEPSE_PNS7_10RpcContextEE4_clESG_SH_SJ_
          @          0x253fb65  _ZNSt17_Function_handlerIFvPKN6google8protobuf7MessageEPS2_PN4kudu3rpc10RpcContextEEZN6imp
      ala16ControlServiceIfC4ERK13scoped_refptrINS6_12MetricEntityEERKSD_INS7_13ResultTrackerEEEUlS4_S5_S9_E4_E9_M_invokeE
      RKSt9_Any_dataOS4_OS5_OS9_
          @          0x2c9612f  std::function<>::operator()()
          @          0x2c95ade  kudu::rpc::GeneratedServiceIf::Handle()
          @          0x21d8c55  impala::ImpalaServicePool::RunThread()
          @          0x21de836  boost::_mfi::mf0<>::operator()()
          @          0x21de468  boost::_bi::list1<>::operator()<>()
          @          0x21de02e  boost::_bi::bind_t<>::operator()()
          @          0x21ddaa5  boost::detail::function::void_function_obj_invoker0<>::invoke()
          @          0x2140b55  boost::function0<>::operator()()
          @          0x271e1a9  impala::Thread::SuperviseThread()
          @          0x2726146  boost::_bi::list5<>::operator()<>()
          @          0x272606a  boost::_bi::bind_t<>::operator()()
          @          0x272602b  boost::detail::thread_data<>::run()
          @          0x3f0f621  thread_proxy
          @     0x7f4db3f356da  start_thread
          @     0x7f4db092ca3e  clone
      Wrote minidump to /home/tarmstrong/Impala/impala/logs/cluster/minidumps/impalad/3204ffe5-6905-4842-d702c395-21c4eca5
      .dmp
      (END)
      
      

      Attachments

        1. impalad.ERROR.gz
          5 kB
          Tim Armstrong
        2. impalad.FATAL.gz
          0.3 kB
          Tim Armstrong
        3. impalad.INFO.gz
          31.93 MB
          Tim Armstrong

        Issue Links

          Activity

            People

              stigahuang Quanlong Huang
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: